--- a/index.html
+++ b/index.html
@@ -6,19 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>portfolio</title>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <header>
-        <button>
-            <img src="./assets/hb-logo-design-vector-template-2985172-PhotoRoom.png" alt="">
-        </button>
-        
-    </header>
+    <nav class="navbar">
+        <div class="navbar-container container">
+            <input type="checkbox" name="" id="">
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div>
+            <ul class="menu-items">
+                <li><a href="#home">Accueil</a></li>
+                <li><a href="#about">A propos</a></li>
+                <li><a href="#food">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <h1 class="logo">HB</h1>
+        </div>
+    </nav>
     <main>
-
-    </main>
-    <footer>
-
-    </footer>
+        <h1>HAKIM BENBAHLOULI</h1>
+        <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
+    </main> 
 </body>
 </html>
